# localization-model

./: .gitignore  README.md  pyproject.toml
data/: README.md
docs/: dataset_format.md  inference.md  training.md
notebooks/: analysis_training_curves.ipynb
scripts/: build_cache.py  check_bbox_vs_image_space.py  check_dataset.py  debug_dataset.py  eval.py  export_case_slicer.py  make_cv_folds.py  make_index.py  plot_history.py  run_cv.py  summarize_cv.py  train.py  visualize_case.py
src/localization/data/: cached_dataset.py  dataloaders.py  dataset.py  indexing.py  io.py  preprocess.py  sanity.py
src/localization/eval/: metrics.py
src/localization/geometry/: coords.py
src/localization/inference/: decode.py
src/localization/models/: __init__.py  cnn3d_regressor.py  factory.py  resnet3d_regressor.py  unet3d.py
src/localization/targets/: heatmap.py
src/localization/train/: losses.py  trainer.py
src/localization/transforms/: resample.py
src/localization/viz/: __init__.py  plots.py  viewer.py
tests/: test_dataset_shapes.py  test_model_forward.py  test_world_vox_roundtrip.py
